--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,10 @@ platform = atmelavr
 board = uno
 framework = arduino
 
-monitor_speed = 9600
+monitor_speed = 115200
 
 lib_deps = 
-    adafruit/RTClib
+    ; adafruit/RTClib               ; <--- COMMENT OUT THIS LINE
     miguelbalboa/MFRC522
+    SPI
+
