--- a/platformio.ini
+++ b/platformio.ini
@@ -19,4 +19,5 @@ lib_deps =
     ; adafruit/RTClib               ; <--- COMMENT OUT THIS LINE
     miguelbalboa/MFRC522
     SPI
+    marcoschwartz/LiquidCrystal_I2C
 
