--- a/platformio.ini
+++ b/platformio.ini
@@ -16,8 +16,9 @@ framework = arduino
 monitor_speed = 115200
 
 lib_deps = 
-    ; adafruit/RTClib               ; <--- COMMENT OUT THIS LINE
+    adafruit/RTClib               
     miguelbalboa/MFRC522
     SPI
     marcoschwartz/LiquidCrystal_I2C
+    Keypad
 
