--- a/platformio.ini
+++ b/platformio.ini
@@ -17,9 +17,10 @@ monitor_speed = 115200
 
 lib_deps = 
     adafruit/RTClib               
-    miguelbalboa/MFRC522
+    ;miguelbalboa/MFRC522
     SPI
     marcoschwartz/LiquidCrystal_I2C
     Keypad
     SD
+    SoftwareSerial
 
